# aipyapp

./: .coverage  .dockerignore  .gitignore  CONFIG.md  ChangeLog.md  DISCLAIMER.md  Dockerfile  Dockerfile.deb  FEATURES.md  LANGRAPH_INTEGRATION.md  Makefile  PROJECT_SUMMARY.md  QUICK_OVERVIEW.md  README.md  README.zh.md  agent.py  aipython.example.toml  aipython.py  coverage.xml  default.toml  entrypoint.sh  i18n.py  llm.py  publish.py  pyproject.toml  pytest.ini  run.py  run.sh  run_tests.sh  runner.py  start.sh  utils.py
.github/workflows/: docker-image.yml  release.yml
aipy/: __init__.py  agent.py  i18n.py  llm.py  runner.py  utils.py
aipyapp/: __init__.py  __main__.py  chatroom.html  cli_python.py  cli_task.py  default.toml  gui.py  i18n.py  interface.py  main.py  plugin.py  runtime.py  saas.py  wxgui.py
aipyapp/aipy/: __init__.py  agent.py  agent_taskmgr.py  blocks.py  cache.py  chat.py  client.py  config.py  context_manager.py  diagnose.py  event_recorder.py  event_serializer.py  events.py  functions.py  i18n.py  interface.py  langraph_agent.py  libmcp.py  llm.py  mcp.py  mcp_client.py  mcp_tool.py  multimodal.py  plugin.py  plugins.py  prompt.py  prompts.py  response.py  role.py  runner.py  runtime.py  step.py  step_manager.py  stream.py  task.py  task_state.py  taskmgr.py  templates.py  tips.py  tool.py  (+5 more)
aipyapp/cli/: cli_agent.py  cli_ipython.py  cli_python.py  cli_task.py  completer.py
aipyapp/cli/command/: __init__.py  adapter.py  adapter_v2.py  base.py  base_parser.py  base_refactored.py  base_refactored_v2.py  cmd_block.py  cmd_context.py  cmd_custom.py  cmd_display.py  cmd_env.py  cmd_git.py  cmd_help.py  cmd_info.py  cmd_llm.py  cmd_mcp.py  cmd_plugin.py  cmd_role.py  cmd_steps.py  cmd_task.py  cmd_tools.py  cmd_use.py  common.py  custom_command_manager.py  examples.py  keybindings.py  manager.py  manager_refactored.py  manager_v2.py  markdown_command.py  result.py  utils.py
aipyapp/cli/completer/: __init__.py  argparse_completer.py  base.py
aipyapp/cli/display/: base.py  manager.py  style_classic.py  style_minimal.py  style_modern.py
aipyapp/commands/: code_analysis.md  syscheck.md
aipyapp/config/: base.py  llm.py
aipyapp/display/: __init__.py  base.py  base_rich.py  live_display.py  manager.py  style_agent.py  style_classic.py  style_minimal.py  style_modern.py  style_null.py  themes.py
aipyapp/exec/: __init__.py  executor.py  html.py  install.py  prun.py  runner.py  runtime.py  types.py
aipyapp/gui/: __init__.py  about.py  apimarket.py  config.py  main.py  providers.py  statusbar.py  trustoken.py
aipyapp/llm/: __init__.py  base.py  base_openai.py  client_claude.py  client_gemini.py  client_oauth2.py  client_ollama.py  display.py  llm.py  manager.py  models.py  session.py
aipyapp/plugins/: aio_api.py  live_display.py  p_image_tool.py  p_style_agent.py  p_style_classic.py  p_style_minimal.py  p_style_modern.py  p_style_null.py  p_web_tools.py
aipyapp/res/: chatroom.html  console_white.tpl  default.toml  locales.csv  logo.txt  models.yaml
aipyapp/tools/: image.py
aipython/: __main__.py  default.toml  main.py  publish.py  saas.py
aipython/aipy/: agent.py  i18n.py  interface.py  llm.py  runner.py
dev/: Agent.md  CONFIG.md  ChangeLog.md  ChangeLog_v0.3.0.md  ContextManage.md  Display.md  Event.md  FEATURES.md  MCP.md  Multimodal.md  Plugin.md  Role.md  TypedEvents.md  UserCommand.md
docker/: Dockerfile  Dockerfile.deb  entrypoint.sh
docs/: CNAME  Event.md  Plugin.md  README.md  README.zh.md
examples/: langraph_agent_example.py  theme_usage.py
examples/commands/: code_help.md  code_review.md  debug.md  deploy.md  pure_main.md  simple_note.md  system_info.md  test_codeblocks.md
examples/plugins/: p_function_template.py
tests/: conftest.py
tests/unit/: test_basic_framework.py  test_config.py  test_langraph_agent.py  test_simple.py  test_task.py  test_taskmgr.py
www/: README.md  README.zh.md
(+48 files in other folders)
